fixed some bugs related to overflow

--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -54,7 +54,7 @@ nav{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background: black;
     overflow: hidden;
